--- a/css/home.css
+++ b/css/home.css
@@ -16,9 +16,21 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+h2 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 50px;
+   margin-bottom: 5px;
+}
+
 input[type="button"]{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size:20px;
+  }
+
+  input[type="checkbox"]{
+    height: 25px;
+    width: 25px;
+    padding-left: 15px;
   }
 
 button{
@@ -38,13 +50,13 @@ button{
     text-align: center;
   }
   .horizontalChild {
-    border: 1px solid black;
+    height: 190px;
     gap: 10px;
     display: inline-flex;
-    padding: 1rem 1rem;
     vertical-align: center;
   }
   .createimage {
+    vertical-align: top;
     filter: brightness(0%);
     width: 100px;
     height: 100px;
@@ -53,12 +65,45 @@ button{
 }
 .createbutton {
   margin-left: 20px;
+  margin-bottom: 125px;
   border: none;
   cursor: pointer;
   appearance: none;
   background-color: inherit;
-  transition: transform .1s ease-out;
 }
+
+
+.taskImage {
+    float: left;
+    width: 50px;
+    height: 50px;
+    margin: 0;
+    padding: 0;
+}
+
+.taskBox {
+    width: 600px;
+    height: 400px;
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    padding-top: 0px;
+    box-sizing: border-box;
+    background-color: white;
+  }
   
+  .taskPlank {
+    width: 100%;
+    height: 60px;
+    background-color: #e0e0e0;
+    border: 1px solid #aaa;
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    box-sizing: border-box;
+    padding-left: 15px; 
+    justify-content: flex-start; 
+  }
   
   
